--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
     <main>
         <fieldset>
             <form>
-                <label>Password Generator:</label><br>
-                <textarea id="pwgen">Password</textarea><br>
-                <button id="generate">generate</button>
-                <button id="copy">copy</button>
+                <label>Password Generating:</label>
+                <textarea id="pwgen">Password</textarea>
+                <div>
+                    <button id="generate">generate</button>
+                    <button id="copy">copy</button>
+                </div>
             </form>
         </fieldset>
     </main>
